deployment/kubernetes/tms-server/deploy.yml
apiVersion: apps/v1
kind: Deployment
name: tms-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tms-server
  template:
    metadata:
      labels:
        app: tms-server
    spec:
      containers:
      - name: tms-server
        image: tapis/tms-server:dev
        imagePullPolicy: Always
        ports:
        - name: tms-server
          containerPort: 8080
