deployment/kubernetes/tms-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tms-server
spec:
  type: ClusterIP
  selector:
    app: tms-server
  ports:
  - name: tms-server 
    port: 8080
    targetPort: 8080
