deployment/kubernetes/tms-server/tms-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tms-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-route53-tacc.cloud"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/whitelist-source-range: "129.114.0.0/17"
spec:
  tls:
    - hosts:
        - tms-server.savanna.tacc.cloud
      secretName: tms-server.savanna.tacc.cloud-tls
  rules:
    - host: tms-server.savanna.tacc.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tms-server
                port:
                  number: 8080
